--- a/ticket_system/templates/base.html
+++ b/ticket_system/templates/base.html
@@ -8,7 +8,7 @@
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <!-- Navbar CSS -->
-    <link rel="stylesheet" href="{{ url_for(}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
 <body>
     <nav class="navbar navbar-default">
       <div class="container-fluid">
