changed jQuery source

--- a/ticket_system/templates/base.html
+++ b/ticket_system/templates/base.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <title>fitBody</title>
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     <!-- Navbar CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
 <body>
@@ -22,26 +20,6 @@
           </button>
           <a class="navbar-brand" href="{{ url_for('home') }}">fitBody</a>
         </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li><a href="{{ url_for('home') }}">Home<span class="sr-only">(current)</span></a></li>
-          </ul>
-          <form class="navbar-form navbar-left">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search">
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-          </form><!-- /.search-form -->
-          <div class="session text-right">
-              {% if session %}
-                  <h5>Hello, {{ session.username }}!</h5>
-              {% elif not session.username %}
-                  <h5>Hello, <i>stranger</i> !</h5>
-              {% endif %}
-          </div>
-        </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
     <div>
@@ -57,16 +35,10 @@
 	{% block container %}
 	{% endblock %}
 
-    <!-- Minified jQuery -->
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
-            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-            crossorigin="anonymous">
-    </script>
-
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-            crossorigin="anonymous">
+    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}">
     </script>
 </body>
 </html>
