--- a/ticket_system/templates/home.html
+++ b/ticket_system/templates/home.html
@@ -14,7 +14,7 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-xs-4 col-md-offset-4 register-box">
+            <div class="col-xs-4 col-md-offset-4 register-box text-center">
             <h3>Submit a new Support Ticket</h3>
             <br>
             {% if error %}
