added phone number field to home

--- a/ticket_system/templates/home.html
+++ b/ticket_system/templates/home.html
@@ -24,6 +24,7 @@
                 {{ form.hidden_tag() }}
                 {{ wtf.form_field(form.name) }}
                 {{ wtf.form_field(form.email) }}
+                {{ wtf.form_field(form.phone_number) }}
                 {{ wtf.form_field(form.message) }}
                 <p><input class="btn btn-success" type="submit" value="Ticket"></p>
             </form>
