edited email template

--- a/ticket_system/templates/ticket_email.html
+++ b/ticket_system/templates/ticket_email.html
@@ -2,7 +2,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
 </head>
 <body>
-    <p>Dear {{ c_name }},</p>
+    <p><b>Dear {{ c_name }},</b></p>
     <p>We have received your ticket <b>#{{ tix }}</b> and a dedicated team member will take a look into the issue as soon as possible!</p>
     <p>Regards,</p>
     <div class="container">
