--- a/ticket_system/templates/home.html
+++ b/ticket_system/templates/home.html
@@ -14,8 +14,8 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-xs-4 col-md-offset-4 register-box text-center">
-            <h3>Submit a new Support Ticket</h3>
+            <div class="col-xs-4 col-md-offset-4 register-box text-left">
+            <h3 id="tix_header">Submit a new Support Ticket</h3>
             <br>
             {% if error %}
                 <p class="error"><strong>Error:</strong> {{ error }}</p>
@@ -25,8 +25,10 @@
                 {{ wtf.form_field(form.name) }}
                 {{ wtf.form_field(form.email) }}
                 {{ wtf.form_field(form.phone_number) }}
-                {{ wtf.form_field(form.message) }}
-                <p><input class="btn btn-success" type="submit" value="Ticket"></p>
+                <div id="message">
+                    {{ wtf.form_field(form.message) }}
+                </div>
+                <p><input class="btn btn-success" type="submit" value="Submit Ticket"></p>
             </form>
             </div>
         </div>
