--- a/ticket_system/templates/base.html
+++ b/ticket_system/templates/base.html
@@ -24,7 +24,7 @@
     </nav>
     <div>
 	{% for category, message in get_flashed_messages(with_categories=true) %}
-		<div class="alert alert-{{category}} alert-dismissable" style="background-color:#F7D712">
+		<div class="alert alert-{{category}} alert-dismissible">
 		<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
 		{{ message }}
 		</div>
