added Jinja select field in home.html

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -25,6 +25,7 @@
                 {{ wtf.form_field(form.name) }}
                 {{ wtf.form_field(form.email) }}
                 {{ wtf.form_field(form.phone_number) }}
+                {{ wtf.form_field(form.ticket_type) }}
                 <div id="message">
                     {{ wtf.form_field(form.message) }}
                 </div>
