--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -26,6 +26,7 @@
                 {{ wtf.form_field(form.email) }}
                 {{ wtf.form_field(form.phone_number) }}
                 {{ wtf.form_field(form.ticket_type) }}
+                {{ wtf.form_field(form.severity) }}
                 <div id="message">
                     {{ wtf.form_field(form.message) }}
                 </div>
