added admin index & login HTMl

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -19,6 +19,9 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="{{ url_for('home') }}">fitBody</a>
+            <ul class="nav navbar-nav">
+                <li><a href="{{ url_for('login') }}">Login</a></li>
+            </ul>
         </div>
       </div><!-- /.container-fluid -->
     </nav>
