--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -9,12 +9,12 @@
 <body>
     <div class="container">
         <div class="jumbotron text-center" id="home-jumbotron">
-            <h1>Welcome to fitBody</h1>
+            <h1>fitBody Customer Support</h1>
         </div>
     </div>
     <div class="container">
-        <div class="row">
-            <div class="col-xs-4 col-md-offset-4 register-box text-left">
+        <div class="row" style="width: 51%; margin-left: 280px;">
+            <div class="register-box text-left">
             <h3 id="tix_header">Submit a new Support Ticket</h3>
             <br>
             {% if error %}
@@ -27,6 +27,9 @@
                 {{ wtf.form_field(form.phone_number) }}
                 {{ wtf.form_field(form.ticket_type) }}
                 {{ wtf.form_field(form.severity) }}
+                <p><b><i>General</i></b> - you have a question about fitBody or how to use it's products</p><br>
+                <p><b><i>Degraded</i></b> - fitBody or your configuration is not functioning properly or intermittently</p><br>
+                <p><b><i>Critical Outage</i></b> - fitBody or your configuration is experiencing a complete business outage</p><br>
                 <div id="message">
                     {{ wtf.form_field(form.message) }}
                 </div>
