added cust first & last name form field

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -22,7 +22,8 @@
             {% endif %}
             <form method="POST" action="/home" id="register-form" class="form-group">
                 {{ form.hidden_tag() }}
-                {{ wtf.form_field(form.name) }}
+                {{ wtf.form_field(form.f_name) }}
+                {{ wtf.form_field(form.l_name) }}
                 {{ wtf.form_field(form.email) }}
                 {{ wtf.form_field(form.phone_number) }}
                 {{ wtf.form_field(form.ticket_type) }}
