created reCAPTCHA field in models & added to form

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -34,6 +34,7 @@
                 <div id="message">
                     {{ wtf.form_field(form.message) }}
                 </div>
+                {{ wtf.form_field(form.recaptcha) }}
                 <p><input class="btn btn-success" type="submit" value="Submit Ticket"></p>
             </form>
             </div>
