input url_for for form action, switchd from `block container` to `block body`

--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block container %}
+{% block body %}
 <!DOCTYPE HTML>
 <head>
     <title>Sign in</title>
