--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block container %}
+{% block body %}
 
 <head>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
@@ -20,7 +20,7 @@
             {% if error %}
                 <p class="error"><strong>Error:</strong> {{ error }}</p>
             {% endif %}
-            <form method="POST" action="/home" id="register-form" class="form-group">
+            <form method="POST" action="{{ url_for('home') }}" id="register-form" class="form-group">
                 {{ form.hidden_tag() }}
                 {{ wtf.form_field(form.f_name) }}
                 {{ wtf.form_field(form.l_name) }}
@@ -35,7 +35,7 @@
                     {{ wtf.form_field(form.message) }}
                 </div>
                 {{ wtf.form_field(form.recaptcha) }}
-                <p><input class="btn btn-success" type="submit" value="Submit Ticket"></p>
+                <p><input class="btn btn-primary" type="submit" value="Submit Ticket"></p>
             </form>
             </div>
         </div>
