added Favicon to title bar

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     <!-- Navbar CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
+    <!-- Beer Favicon Title Image-->
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
 <body>
     <!-- Navbar include -->
     {% include 'includes/_navbar.html' %}
