added `logout` navbar option

--- a/src/templates/includes/_navbar.html
+++ b/src/templates/includes/_navbar.html
@@ -12,6 +12,7 @@
             <a class="navbar-brand" href="{{ url_for('home') }}">fitBody</a>
             <ul class="nav navbar-nav">
                 <li><a href="{{ url_for('login') }}">Login</a></li>
+                <li><a href="{{ url_for('logout') }}">Logout</a></li>
             </ul>
         </div>
     </div><!-- /.container-fluid -->
