--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -10,7 +10,7 @@
 <div class="container">
     <div class="well">
         <div class="row">
-            <div class="col-xs-4 col-md-offset-4 register-box">
+            <div class="col-lg-4 col-lg-offset-4 register-box">
                 <form action="" role="form" method="POST" class="text-center">
                     <h2>Sign in</h2>
                     {{ form.hidden_tag() }}
