--- a/src/templates/includes/_errors.html
+++ b/src/templates/includes/_errors.html
@@ -1,6 +1,8 @@
-{% for category, message in get_flashed_messages(with_categories=true) %}
-    <div class="alert alert-{{ category }} alert-dismissible">
-        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-        <b>{{ message }}</b>
-    </div>
-{% endfor %}
+<div class="container">
+    {% for category, message in get_flashed_messages(with_categories=true) %}
+        <div class="alert alert-{{ category }} alert-dismissible text-center">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+            <b>{{ message }}</b>
+        </div>
+    {% endfor %}
+</div>
