--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-lg-9 col-md-9 col-sm-9 col-lg-offset-2">
+            <div class="col-lg-9 col-md-9 col-sm-9 col-lg-offset-2 col-lg-offset-2 col-md-offset-2 col-sm-offset-2">
                 <div class="register-box text-left">
                 <h3 id="tix_header">Submit a new Support Ticket</h3>
                 <br>
