--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -5,6 +5,12 @@
 
 <head>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.min.js"
+      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+      crossorigin="anonymous"></script>
+    <script src="{{ url_for('static', filename='js/jquery.js') }}" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='js/jquery.maskedinput.js') }}" type="text/javascript"></script>
 </head>
 <body>
     <div class="container">
