--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -37,7 +37,8 @@
                         {{ wtf.form_field(form.message) }}
                     </div>
                     {{ wtf.form_field(form.recaptcha) }}
-                    <p><input class="btn btn-primary" type="submit" value="Submit Ticket"></p>
+{#                    <p><input class="btn btn-primary" type="submit" value="Submit Ticket"></p>#}
+                    {{ form.submit(class="btn btn-primary") }}
                 </form>
                 </div>
             </div>
