--- a/src/templates/includes/_navbar.html
+++ b/src/templates/includes/_navbar.html
@@ -13,6 +13,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="{{ url_for('login') }}">Login</a></li>
                 <li><a href="{{ url_for('logout') }}">Logout</a></li>
+                <li><a href="{{ url_for('chat') }}">Chat live!</a></li>
             </ul>
         </div>
     </div><!-- /.container-fluid -->
