--- a/src/templates/chat.html
+++ b/src/templates/chat.html
@@ -4,21 +4,8 @@
     <html>
     <head>
         <title>{{ room }}'s Chat Room</title>
-        <!-- jQuery CDN -->
-        <script src="https://code.jquery.com/jquery-3.2.1.min.js"
-                integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-                crossorigin="anonymous"></script>
-        <!-- SocketIO CDN -->
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-              integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-              crossorigin="anonymous">
-        <!-- Latest compiled and minified JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-                integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-                crossorigin="anonymous"></script>
-
+        {% include 'includes/_frameworks.html' %}
+        <!-- Chat CSS -->
         <link rel="stylesheet" href="{{ url_for('static', filename='css/chat.css') }}">
 
         <script type="text/javascript" charset="utf-8">
@@ -66,8 +53,9 @@
             <div class="chat msg-wrapper text-left"></div>
         </div>
         <label for="text">Type your message below <span class="glyphicon glyphicon-arrow-down"></span></label>
+        <p class="text-left"><span class="glyphicon glyphicon-user"></span> Welcome, <i><b>{{ name }}</b></i> !</p>
         <input class="form-control" id="text" size="80" placeholder="Message..."><br><br>
-        <button class="btn btn-danger align-left" href="#" onclick="leave_room()">Leave the chat!</button>
+        <button class="btn btn-danger align-left" href="#" onclick="leave_room()">Exit Chat Room <span class="glyphicon glyphicon-remove-sign"></span></button>
     </div>
     </body>
     </html>
