--- a/src/templates/chat_login.html
+++ b/src/templates/chat_login.html
@@ -6,24 +6,26 @@
         <title>Chat Room Login</title>
     </head>
     <body>
-        <div class="container">
-            <h1>Please Login to a Department Chat Room</h1>
+    <div class="container">
+        <div class="col-lg-6 col-lg-offset-3">
+            <h2 class="text-center">Please Login to a Department Chat</h2>
             <div class="form-group">
                 <form method="POST">
-                {{ form.hidden_tag() }}
-                <br>
-                {{ form.name.label }}:
-                <br>
-                {{ form.name(class="form-control") }}
-                <br>
-                {{ form.room.label }}:
-                <br>
-                {{ form.room(class="form-control") }}
-                <br>
-                {{ form.submit(class="btn btn-primary") }}
-            </form>
+                    {{ form.hidden_tag() }}
+                    <br>
+                    {{ form.name.label }}:
+                    <br>
+                    {{ form.name(class="form-control") }}
+                    <br>
+                    {{ form.room.label }}:
+                    <br>
+                    {{ form.room(class="form-control") }}
+                    <br>
+                    {{ form.submit(class="btn btn-primary") }}
+                </form>
             </div>
         </div>
+    </div>
     </body>
     </html>
 {% endblock %}
