--- a/src/templates/chat.html
+++ b/src/templates/chat.html
@@ -4,37 +4,52 @@
     <html>
     <head>
         <title>{{ room }}'s Chat Room</title>
+        <!-- Include all Frameworks & Libraries -- >
         {% include 'includes/_frameworks.html' %}
         <!-- Chat CSS -->
         <link rel="stylesheet" href="{{ url_for('static', filename='css/chat.css') }}">
-
+        <!-- Main Script -->
         <script type="text/javascript" charset="utf-8">
             var socket;
             $(document).ready(function () {
                 // Connect socket to URL
                 socket = io.connect('http://' + document.domain + ':' + location.port + '/chat');
+
                 // Connection to the chat room
                 socket.on('connect', function () {
                     socket.emit('joined', {});
-                });
+                }); // END `connect`
+
                 // Connected to the chat room message
                 socket.on('status', function (data) {
                     $('div.msg-wrapper').append('<div class="msg_bubble"><b>' + data.msg + '</b></div')
-                });
+                }); // END `status`
+
                 // Messages sent inside of the chat room
                 socket.on('message', function (data) {
-                    $('div.msg-wrapper').append('<div class="msg_bubble"> ' + data.msg + ' </div')
-                });
-                // Clear the input box every time msg is sent off
+                    $('div.msg-wrapper').append('<div class="msg_bubble"> ' + data.msg + ' </div');
+                    // Grab `box` ID
+                    var objDiv = document.getElementById("box");
+                    // Auto scroll when messages exceed the height of the box
+                    objDiv.scrollTop = objDiv.scrollHeight;
+                }); // END `message`
+
+                // Grab the msg & Clear the input box every time msg is sent
                 $('#text').keypress(function (e) {
+                    // Grab the `return` or `enter` keys
                     var code = e.keyCode || e.which;
+                    // If the key `return` or `enter` is pressed
                     if (code === 13) {
+                        // Grab the text enter in the `input` element
                         var text = $('#text').val();
+                        // Clear the `input` element
                         $('#text').val('');
+                        // Emit the message to the chat from the `input` element
                         socket.emit('text', {msg: text});
                     }
-                });
-            });
+                }); // END `.keypress()`
+            }); // END `$(document).ready()`
+
             // Leave the chat room
             function leave_room() {
                 socket.emit('left', {}, function () {
@@ -43,20 +58,25 @@
                     // go back to the login page
                     window.location.href = "{{ url_for('chat_login') }}";
                 });
-            }
+            } // END `leave_room()`
         </script>
     </head>
     <body>
+    <!-- Main container -->
     <div class="container text-center">
         <h1>{{ room }}'s Chat Room</h1>
+        <!-- All messages get placed inside of this wrapper box -->
         <div id="box">
-            <div class="chat msg-wrapper text-left"></div>
+            <!-- Messages are placed inside of this div -->
+            <div id="new-msg" class="chat msg-wrapper text-left"></div>
         </div>
         <label for="text">Type your message below <span class="glyphicon glyphicon-arrow-down"></span></label>
         <p class="text-left"><span class="glyphicon glyphicon-user"></span> Welcome, <i><b>{{ name }}</b></i> !</p>
+        <!-- Input box, where messages are typed -->
         <input class="form-control" id="text" size="80" placeholder="Message..."><br><br>
+        <!-- Exit chat room button -->
         <button class="btn btn-danger align-left" href="#" onclick="leave_room()">Exit Chat Room <span class="glyphicon glyphicon-remove-sign"></span></button>
-    </div>
+    </div> <!-- ./end container -->
     </body>
     </html>
 {% endblock %}
