removed name in email template

--- a/src/templates/ticket_email.html
+++ b/src/templates/ticket_email.html
@@ -24,7 +24,7 @@
             <p>We have received your ticket and a dedicated team member will take a look into the issue as soon as possible!</p>
             <p>Regards,</p>
             <p>
-                fitBody Customer Support <br>
+                Customer Support <br>
                 One Washington Square <br>
                 San Jose, CA 95103 <br>
                 (800) 545 - 7799 <br>
