--- a/src/templates/ticket_status_form.html
+++ b/src/templates/ticket_status_form.html
@@ -7,6 +7,7 @@
             <h4 class="text-center">Check the status of your ticket!</h4><br>
             <form method="POST" action="{{ url_for('ticket_status') }}" id="status-form" class="form-group">
                 {{ form.hidden_tag() }}
+                {{ wtf.form_field(form.cust_f_name) }}
                 {{ wtf.form_field(form.tix_num) }}
                 {{ form.submit(class="btn btn-primary") }}
             </form>
