--- a/src/static/css/ticket_status.css
+++ b/src/static/css/ticket_status.css
@@ -1,3 +1,11 @@
 p {
     font-size: 16px;
 }
+
+div.msg_bubble {
+    background-color: #ddd6ba;
+    padding: 5px 10px;
+    border-radius: 10px;
+    color: #555;
+    margin-bottom: 5px;
+}
