--- a/src/templates/ticket_status.html
+++ b/src/templates/ticket_status.html
@@ -22,20 +22,5 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="{{ url_for('static', filename="js/ticket-comments.js") }}">
-
-        $(document).ready(function () {
-
-            var commentAppend = $('#comment-append');
-            if (commentAppend.html() === '') {
-                commentAppend.append('<i><h4 id="com-placeholder">No comments so far...</h4></i>');
-            }
-
-            $('#submit-btn').click(function() {
-                var comment = $('#comment').val();
-                $('#com-placeholder').remove();
-                commentAppend.append('<div class="msg_bubble"> ' + comment + ' </div')
-            });
-        });
-    </script>
+    <script src="{{ url_for('static', filename="js/ticket-comments.js") }}"></script>
 {% endblock %}
