--- a/src/static/css/ticket_status.css
+++ b/src/static/css/ticket_status.css
@@ -9,3 +9,11 @@ div.msg_bubble {
     color: #555;
     margin-bottom: 5px;
 }
+
+textarea.form-control {
+    width: 100%;
+    height: 100px;
+    border: 1px solid orange;
+    border-radius: 10px;
+    margin-bottom: 1%;
+}
