removed input and added textarea

--- a/src/templates/ticket_status.html
+++ b/src/templates/ticket_status.html
@@ -17,7 +17,7 @@
                 <div id="comment-append" class="comment-area text-left"></div>
                 <br>
                 <p class="text-left">Enter comments for tickets below! <span class="glyphicon glyphicon-arrow-down"></span></p>
-                <input class="form-control" id="comment" size="80" placeholder="Message..."><br><br>
+                <textarea id="comment" class="form-control" placeholder="Comment..."></textarea>
                 <input id="submit-btn" type="submit" value="Submit" class="btn btn-success">
             </div>
         </div>
