--- a/src/static/css/ticket_status.css
+++ b/src/static/css/ticket_status.css
@@ -17,3 +17,12 @@ textarea.form-control {
     border-radius: 10px;
     margin-bottom: 1%;
 }
+
+#box {
+    border: solid #66becb 2px;
+    border-radius: 25px;
+    padding: 15px;
+    margin-bottom: 15px;
+    height: 500px;
+    overflow: auto;
+}
